# diploma_checker

./: .env.example  .example.env  .gitignore  README.md  alembic.ini  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/app/: app.py
backend/app/modules/auth/: __init__.py
backend/app/modules/auth/models/: company.py  company_limit.py  university.py
backend/app/modules/auth/repositories/: __init__.py  api_keys.py  auth.py  limits.py
backend/app/modules/auth/routers/: __init__.py  company.py  public.py  router.py
backend/app/modules/auth/schemas/: api_keys.py  registration.py
backend/app/modules/auth/services/: company_access_service.py  profile_service.py  session_service.py
backend/app/modules/hr/: __init__.py
backend/app/modules/hr/repositories/: __init__.py  diploma.py  university_lookup.py
backend/app/modules/hr/routers/: __init__.py  deps.py  router.py  verification.py
backend/app/modules/hr/schemas/: __init__.py  hr.py
backend/app/modules/hr/services/: __init__.py  presentation.py  verification.py
backend/app/modules/university/: __init__.py
backend/app/shared/: cryptography.py  redis_client.py
backend/app/shared/bootstrap/: __init__.py
backend/app/shared/middleware/: auth.py  cors.py  request_context.py
backend/app/shared/models/: __init__.py  access_token.py  diploma.py
backend/app/shared/repositories/: base.py
backend/app/shared/routers/: health.py
backend/demo/: openapi.json
backend/migrations/: env.py
backend/migrations/versions/: 0515e497c271_init_auth_module.py  7c1a0b2d3e4f_initial_schema.py  b4a9242eddfb_init.py  f8a91c2d4b10_add_diploma_registry_fields.py
backend/tests/: conftest.py  support.py  test_auth_public.py  test_health.py  test_university_diplomas.py
(+148 files in other folders)
