[project]
name = "diasoft-verification"
version = "0.1.0"
description = "Diasoft verification service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.13.3,<2.0.0",
  "redis>=5.2.0,<6.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.0.1,<5.0.0",
  "cryptography>=43.0.3,<44.0.0",
  "openpyxl>=3.1.5,<4.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "ruff>=0.8.3,<1.0.0",
  "openapi-spec-validator>=0.7.1,<1.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "testcontainers>=4.9.0,<5.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
plugins = []

[[tool.mypy.overrides]]
module = ["passlib.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "alembic",
  "tests",
  "specs",
  "README.md",
  "pyproject.toml",
  "main.py",
  "alembic.ini",
  "Dockerfile",
  "docker-compose.yml",
  ".env.example",
]
